[package]
name = "actix-diesel"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]

[dependencies]
dotenv = "0.13"
envy = "0.3"
log = "0.4"
env_logger = "0.6"

actix = "0.7"
actix-web = "0.7"
failure = "0.1"
futures = "0.1"

uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.3", features = ["postgres", "chrono", "uuid", "network-address", "serde_json", "r2d2"] }
r2d2 = "0.8"
transaction = { path = "../../actcast/api_server/transaction", features = ["diesel"] }


mdo = "0.3"
mdo-future = "0.2"


