[package]
name = "lapin_actix_test"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]

[dependencies]
futures = "0.1"
lapin-futures = "0.11"
log = "0.4"
env_logger = "0.5"
mdo = "0.3"
mdo-future = "0.2"
actix = "0.5"
tokio-core = "0.1"
tokio-dns-unofficial = "0.2"
uuid = { version = "0.6.0", features = ["v4"] }
