[package]
name = "actix-query"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = {version="0.4",  features = ["serde"] }