[package]
name = "actix-rt-sandbox"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2"
actix-web = "1.0"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
log = "0.4"
mdo = "0.3"
mdo-future = "0.2"
sentry = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6"
env_logger = "0.6"
hyper-tls = "0.3"

[dev-dependencies]
