[package]
name = "actix-sse"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
futures = "0.1"
mdo = "0.3"
mdo-future = "0.2"
actix = "0.5"
actix-web = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = "0.1"
bytes = "0.4"