[package]
name = "future-cancel"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2", features = [] }
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.10", features = ["stream"] }
actix-rt = { version = "1.0", features = [] }
