[package]
name = "actix3-error"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10"
futures = "0.3"
err-derive = "0.3"
serde_json = "1"
env_logger = "0.8"
log = "0.4"