[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = {version="1", features=["full"]}
env_logger = "0.10"
anyhow = "1"
futures = "0.3"
serde ={ version = "1", features = ["derive"] }
serde_json = "1"
