[package]
name = "async-sandbox"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
err-derive = "0.1"
runtime = { version = "0.3.0-alpha.5", default-features = true }
runtime-tokio = "0.3.0-alpha.5"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
tokio-timer = "0.2"
tracing = { git = "https://github.com/tokio-rs/tracing.git" }
tracing-env-logger = { git = "https://github.com/tokio-rs/tracing.git" }
tracing-futures = { git = "https://github.com/tokio-rs/tracing.git" }
tracing-log = { git = "https://github.com/tokio-rs/tracing.git" }
log = "*"

