[package]
name = "async-std-sandbox"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.0", features = ["attributes"] }
# reqwest = "0.10"
# futures = { version = "0.3", features = ["compat"] }
# tokio = {version = "0.2", features = ["full"] }
surf = { version = "1.0.3", features= ["hyper-client", "hyper-tls", "native-tls"], no-default-features = true }

