[package]
name = "atcoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-bigint = "0.4.2"
num-complex = "0.4.0"
num-integer = "0.1.42"
num-iter = "0.1.40"
num-rational = "0.4.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
ndarray = "0.15.3"
nalgebra = "0.29.0"
alga = "0.9.3"
libm = "0.2.1"
rand = { version = "0.8.4", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand_hc = "0.3.1"
rand_pcg = "0.3.1"
rand_distr = "0.4.1"
petgraph = "0.6.0"
indexmap = "1.3.2"
regex = "1.5.5"
lazy_static = "1.4.0"
ordered-float = "2.8.0"
ascii = "1.0.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.10.1"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.5.3"
im-rc = "15.0.0"
fixedbitset = "0.4.0"
bitset-fixed = "0.1.0"
proconio = { version = "0.4.3", features = ["derive"] }
text_io = "0.1.8"
whiteread = "0.5.0"
rustc-hash = "1.1.0"
smallvec = "1.2.0"

[dev-dependencies]
rstest = "0.11"
proptest = "1.0"
proptest-derive = "0.3"
