[workspace]
members = [
    "i2cdev",
    "mpu6050",
    "opencat"
]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
# libm = { path = "../../libm" }
# rand = { path = "../rand" }