[workspace]
members = [ "avr-serial","i2cdev", "mpu6050", "opencat"]

[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"

[patch.crates-io]
# libm = { path = "../../libm" }
# rand = { path = "../rand" }