[package]
name = "aws-dynamodb-query-builder"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
rusoto_core = "*"
rusoto_dynamodb = "*"
log = "*"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
err-derive = "0"
# runtime = { version = "0.3.0-alpha.5", default-features = true }
# runtime-tokio = "0.3.0-alpha.5"
# futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
envy = "*"
env_logger = "*"
dynomite = { version = "*", features = ["uuid", "derive"] }
# serde_dynamodb = { git = "https://github.com/mockersf/serde_dynamodb", branch = "master" }
# serde_dynamodb_derive = { git = "https://github.com/mockersf/serde_dynamodb", branch = "master" }
