[package]
name = "aws-ecr-sandbox"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]

[dependencies]
failure = "0.1.2"
futures = "0.1.23"
tokio = "0.1.7"
mdo = "0.3.0"
mdo-future = "0.2.0"
rusoto_core = "0.33.1"
rusoto_credential = "0.12.0"
rusoto_cognito_identity = "0.33.1"
rusoto_sts = "0.33.1"
rusoto_ecr = "0.33.1"