[package]
name = "aws-iot-data-sandbox"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14"
env_logger = "0.6"
envy = "0.4"
failure = "0.1"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
hyper = "0.12.32"
hyper-rustls = "0.16.1"
runtime = { version = "0.3.0-alpha.5", default-features = true }
runtime-tokio = "0.3.0-alpha.5"
rusoto_core = "0.40.0"
rusoto_credential = "0.40.0"
rusoto_iot_data = "0.40.0"
rustls = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
tokio-fs = "0.1"
