[package]
name = "aws-iot-data-sandbox"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = { version = "0.4", features = ["serde"] }
# dotenv = "0.14"
# env_logger = "0.7"
# envy = "0.4"
# failure = "0.1"
# futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly", "compat"] }
# hyper = { version = "0.13.0-alpha.2", features = ["unstable-stream"] }
# hyper-rustls = "0.18.0-alpha.1"
# rusoto_core = "0.40"
# rusoto_credential = "0.40"
# rusoto_iot_data = "0.40"
# rustls = "0.16"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = "0.2.0-alpha.5"
