[package]
name = "aws-lambda-rust"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto = "*"
lambda_runtime = "*"
serde = "*"
serde_json = "*"
log = "*"
err-derive = "*"
aws_lambda_events = "0.2.4"
