[package]
name = "aws-lambda-rust"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
lambda_runtime = "0.3"
serde = "1"
serde_json = "1"
log = "0.4"
thiserror = "1.0"
aws_lambda_events = "0.4"
tokio = "1"
tower = "0.4"
void = "1"
envy = "0.4"
env_logger = "0.8"
smart-default = "0.6"
validator = { version = "0.12", features = ["derive"] }
derive_more = "0.99"
