[package]
name = "aws-lambda-tcp-keepalive"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
lambda_runtime = "0.2"
rusoto_lambda = "0.44"
rusoto_core = "0.44"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.7"


