[workspace]
members = ["server", "client"]

[package]
name = "battery-included"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
derive_builder = "0.7"
derive_more = "0.14"
dotenv = "0.13"
env_logger = "0.6"
envy = "0.4"
failure = "0.1"
itertools = "0.8"
libm = "0.1"
log = "0.4"
log-derive = "0.2"
metered = "0.1"
proptest = "0.9"
rand = "0.6"
rayon = "1.0"
recap = "0.1"
regex = "1.0"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
tokio = "0.1"
toml = "0.4"
url = "1.7"
server = { path = "./server" }
client = { path = "./client" }
structopt = "0.2"
