[package]
name = "hello-rs"
version = "0.1.0"
authors = ["legokichi <legokichi@gmail.com>"]
links = "hello"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
libc = "0.2"
zmq = "0.8"
futures = "0.1.14"
tokio-core = "0.1"
rayon = "0.9"
#cv = { git = "https://github.com/nebgnahz/cv-rs.git" } #, features = [ "gpu" ] }
opencv = { git = "https://github.com/kali/opencv-rust.git" }
websocket = { git = "https://github.com/cyderize/rust-websocket.git" }
