[package]
name = "device-api-a"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
chrono = { features = ["serde"], version = "0.4" }
derive_more = "0.99"
load_file = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "~0.3.40"
serde-wasm-bindgen = "0.1"
wasm-bindgen = { version = "^0.2.63", features = ["serde-serialize"] }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

