[package]
name = "server"
version = "0.1.0"
authors = ["Legokichi Duckscallion <legokichi@gmail.com>"]


[workspace]
members = [
    "./",
    "db",
]


[dependencies]
db = { path = "db" }
dotenv = "0.13"
log = "0.4"
env_logger = "0.5"
futures = "0.1"
mdo = "0.3"
mdo-future = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1"
chrono = { version = "0.4", features = ["serde"] }
askama = { version = "0.5", features = ["serde-json"] }
hyper = { version = "0.12" }
serde_urlencoded = "0.5"
tokio = { version = "0.1",  default-features = false }

[build-dependencies]
askama = { version = "0.5", features = ["serde-json"] }
