[package]
name = "dlq-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.56.1"
aws-sdk-kinesis = "0.31.1"
aws-sdk-lambda = "0.31.1"
aws-sdk-sqs = "0.31.1"
aws-sdk-dynamodb = "0.31.1"
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_31"] }
aws-smithy-types-convert = { version = "0.56.1", features = ["convert-chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = { version = "0.3", features = [] }
log = "0.4"
num-bigint = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
derive_more = "0.99"
